--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -67,7 +67,7 @@
 .auto-enter-active {
   opacity: 1;
   transform: translateY(0);
-  transition: opacity 1000ms, transform 1000ms;
+  transition: opacity 200ms, transform 600ms;
 }
 
 /* .auto-leave {
@@ -80,3 +80,7 @@
   transform: translateY(500%);
   transition: opacity 500ms, transform 500ms;
 } */
+
+.hide {
+  display: none;
+}
