change portfolio stuff

--- a/styles/index.css
+++ b/styles/index.css
@@ -31,17 +31,17 @@ body, html {
 
 #transform  {
 object-fit: contain;
-  -webkit-animation: swoopin 3s;
-  -moz-animation:    swoopin 3s; 
-  -o-animation:      swoopin 3s; 
-  animation:         swoopin 3s;
+  -webkit-animation: swoopin 1500ms;
+  -moz-animation:    swoopin 1500ms; 
+  -o-animation:      swoopin 1500ms; 
+  animation:         swoopin 1500ms;
 }
 
 .about  {
-  -webkit-animation: swoopin 2s;
-  -moz-animation:    swoopin 2s; 
-  -o-animation:      swoopin 2s; 
-  animation:         swoopin 2s;
+  -webkit-animation: swoopin 1250ms;
+  -moz-animation:    swoopin 1250ms; 
+  -o-animation:      swoopin 1250ms; 
+  animation:         swoopin 1250ms;
   margin-left: 5%;
 }
 
@@ -81,8 +81,8 @@ article {
 
 .accordion {
     margin-left: 3%;
-    -webkit-animation: swoopin 1s;
-  -moz-animation:    swoopin 1s; 
-  -o-animation:      swoopin 1s; 
-  animation:         swoopin 1s;
+    -webkit-animation: swoopin 1000ms;
+  -moz-animation:    swoopin 1000ms; 
+  -o-animation:      swoopin 1000ms; 
+  animation:         swoopin 1000ms;
 }
