--- a/styles/home.css
+++ b/styles/home.css
@@ -1,6 +1,6 @@
-body, html {
-    margin: 0;
-    background-image: linear-gradient(to bottom right, #222429, rgb(63, 63, 63));
+#root {
+  height: 100%;
+  background-image: linear-gradient(to bottom right, #222429, rgb(63, 63, 63));
 }
 
 .header-transition-enter {
@@ -14,13 +14,20 @@ body, html {
   transition: opacity 3000ms, transform 3000ms;
 }
 
+.header-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-image: inherit;
+  height: 90%;
+}
+
 .App-header {
     display: flex;
     align-items: center;
     justify-content: center;
     color: white;
     font-family: sans-serif;
-    margin-top: 10%;
     /* height: 95vh; */
 }
 
