--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,19 +1,17 @@
-.project-group-wrapper {
-  background-image: inherit;
-}
 .project-group {
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
     margin-top: 3%;
-    height: auto;
+    height: inherit;
+    background-image: linear-gradient(to bottom right, #222429, rgb(63, 63, 63));
 }
 
 .list-group-item {
         background-color: rgb(51, 51, 51) !important;
 }
 
-.card {
+.project-group .card {
   margin-bottom: 3%;
 }
 
