--- a/styles/home.css
+++ b/styles/home.css
@@ -1,8 +1,3 @@
-#root {
-  height: 100%;
-  background-image: linear-gradient(to bottom right, #222429, rgb(63, 63, 63));
-}
-
 .header-transition-enter {
   opacity: 0;
   transform: scale(0.9);
@@ -15,24 +10,21 @@
 }
 
 .header-wrapper {
+  height: 90vh;
   display: flex;
-  flex-direction: column;
   justify-content: center;
-  height: 90%;
 }
 
 .App-header {
     display: flex;
     align-items: center;
-    justify-content: center;
     color: white;
     font-family: sans-serif;
 }
 
 .App-header img {
   border-radius: 100px;
-  margin-right: 5px;
-  height: 45vh;
+  max-height: 50vh;
 }
 
 .header-links {
