--- a/styles/about.css
+++ b/styles/about.css
@@ -71,8 +71,15 @@ article {
   animation:         swoopin 1000ms;
 }
 
-
+@media only screen and (max-width: 400px) {
+  .accordion {
+    display: none;
+  }
+}
 @media only screen and (min-width: 401px) and (max-width: 960px) {
+  .accordion {
+    display: none;
+  }
 }
 
 @media only screen and (min-width: 961px) {
