change mobile offering

--- a/styles/index.css
+++ b/styles/index.css
@@ -23,3 +23,9 @@ body, html {
     color: white;
     padding: 3% 0%;
 }
+
+@media only screen and (max-width: 414px) {
+  .nav {
+    display: none !important;
+  }
+}
