fix css background colors for responsive

--- a/styles/home.css
+++ b/styles/home.css
@@ -10,7 +10,7 @@
 }
 
 .header-wrapper {
-  height: 90vh;
+  /* height: 90vh; */
   display: flex;
   flex-direction: column;
   justify-content: center;
