--- a/styles/index.css
+++ b/styles/index.css
@@ -1,17 +1,3 @@
-body, html {
-    margin: 0;
-    height: 100%;
-}
-
-/* body {
-    background-image: linear-gradient(to bottom right, #222429, rgb(63, 63, 63));
-} */
-
-#root {
-  background-image: linear-gradient(to bottom right, #222429, rgb(63, 63, 63));
-  height: 100vh;
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -19,9 +5,21 @@ body, html {
   color: white;
 }
 
+body, html {
+    height: -webkit-fill-available;
+    margin: 0;
+  }
+  
+#root {
+    background-image: linear-gradient(to bottom right, #222429, rgb(63, 63, 63));
+    height: inherit;
+}
+
+
+
 .nav-tabs .nav-link {
     color: white;
-    padding: 3% 0%;
+    padding: 2.9% 0%;
 }
 
 @media only screen and (max-width: 414px) {
