--- a/styles/index.css
+++ b/styles/index.css
@@ -12,7 +12,7 @@ body, html {
   
 #root {
     background-image: linear-gradient(to bottom right, #222429, rgb(63, 63, 63));
-    height: inherit;
+    height: none;
 }
 
 
