--- a/styles/index.css
+++ b/styles/index.css
@@ -15,6 +15,12 @@ body, html {
     height: none;
 }
 
+@-moz-document url-prefix() { 
+  #root {
+     height: 100vh !important;
+  }
+}
+
 
 
 .nav-tabs .nav-link {
