--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,18 +1,18 @@
 .project-group-wrapper {
     height: auto;
     background-image: inherit;
-}
-
-.project-group {
+  }
+  
+  .project-group {
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
-    margin-top: 3%;
-
+    padding-top: 3%;
+    
 }
 
 .list-group-item {
-    background-color: rgb(51, 51, 51) !important;
+  background-color: rgb(41, 41, 41) !important;
 }
 
 .project-group .card {
