--- a/styles/home.css
+++ b/styles/home.css
@@ -31,11 +31,58 @@
     align-items: center;
     color: white;
     font-family: sans-serif;
+    padding: 0px 30px;
+    transition: all .5s ease-in-out;
+   transform: scale(.1);
+   animation: fadeIn;
+    
+}
+
+.fade-in {
+  animation: fadeIn ease 3s;
+-webkit-animation: fadeIn ease 3s;
+-moz-animation: fadeIn ease 3s;
+-o-animation: fadeIn ease 3s;
+-ms-animation: fadeIn ease 3s;
+}
+
+@keyframes fadeIn {
+0% {opacity:0;}
+100% {opacity:1;}
+}
+
+@-moz-keyframes fadeIn {
+0% {opacity:0;}
+100% {opacity:1;}
+}
+
+@-webkit-keyframes fadeIn {
+0% {opacity:0;}
+100% {opacity:1;}
+}
+
+@-o-keyframes fadeIn {
+0% {opacity:0;}
+100% {opacity:1;}
+}
+
+@-ms-keyframes fadeIn {
+0% {opacity:0;}
+100% {opacity:1;}
+}
+
+.transform-header {
+  transform: scale(1);
+}
+
+.App-header > * {
+  padding: 15px;
 }
 
 .App-header img {
   border-radius: 100px;
   max-height: 50vh;
+  margin-right: 5px;
 }
 
 .header-links {
@@ -58,7 +105,7 @@
 
 .App-header > div {
   display: flex;
-  margin-left: 10px;
+  margin-left: 12px;
   flex-direction: column;
   align-items: center;
   padding-top: 3px;
